.k8s/api-checkout/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tcc-api-checkout-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tcc-api-checkout-backend
  template:
    metadata:
      labels:
        app: tcc-api-checkout-backend
    spec:
      containers:
        - name: backend
          image: ahmentz/tcc-backend:api-checkout-latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8002
          resources:
            requests:
              memory: "100Mi"
              cpu: "100m"
            limits:
              memory: "500Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8002
            initialDelaySeconds: 60
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8002
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
