.k8s/api-checkout/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-checkout-backend-service
spec:
  type: NodePort
  selector:
    app: tcc-api-checkout-backend
  ports:
    - port: 8002
      targetPort: 8002
