.k8s/api-checkout/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-checkout-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - http:
        paths:
          - path: /api/checkout
            pathType: Prefix
            backend:
              service:
                name: api-checkout-backend-service
                port:
                  number: 8002
